--- a/Task.html
+++ b/Task.html
@@ -607,6 +607,7 @@ Prompts:(These are references for your explanation, above.)<br>
         $('#txt5').hide();
         $('#txt6').hide();
         $('#txt7').hide();
+        $('#txt10').hide();
         $('#addtask1').hide();
         $('#target_activity').hide();
         $('#target_activity2').hide();
